2011-07-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* psxhdrs/Makefile.am: Remove -Wno-unused-but-set-variable 
	(Non-portable).

2011-07-19	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1838/filesystem
	* psxfchx01/init.c, psxfchx01/psxfchx01.scn: fchmod() does not need a
	writeable file descriptor.

2011-06-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* psxautoinit01/Makefile.am, psxautoinit02/Makefile.am,
	psxbarrier01/Makefile.am, psxrwlock01/Makefile.am,
	psxspin01/Makefile.am, psxspin02/Makefile.am:
	Remove scndir.

2011-06-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* psxautoinit01/Makefile.am, psxbarrier01/Makefile.am,
	psxclassic01/Makefile.am, psxcleanup01/Makefile.am,
	psxfchx01/Makefile.am, psxpasswd01/Makefile.am,
	psxpasswd02/Makefile.am, psxpipe01/Makefile.am,
	psxrwlock01/Makefile.am, psxspin01/Makefile.am,
	psxspin02/Makefile.am: Eliminate rtems_scn_DATA.
	Install *.doc to rtems_testsdir.
	* Makefile.am: Remove EXTRA_DIST.
	Remove DIST_SUBDIRS.
	Remove obsolete comments.
	* psxclassic01/psxclassic01.doc: Fix copyright date.

2011-05-16	Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* psxclock/init.c (Init):
	Use CLOCK_PROCESS_CPUTIME_ID and CLOCK_THREAD_CPUTIME_ID.
	* psxclock/psxclock.scn: Regenerate.

2011-05-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxfile01/test.c, psxmsgq01/init.c, psxreaddir/test.c: Fix tests
	broken in warning pass.

2011-05-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psx04/task3.c, psxfile01/test.c, psxhdrs/Makefile.am,
	psxmsgq01/init.c, psxreaddir/test.c, psxsignal01/init.c,
	psxtimes01/init.c, psxualarm/init.c: Remove warnings.

2011-04-15	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* psxstat/test.c: Fixed integer type.  Check status codes.

2011-03-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psx04/init.c, psx04/psx04.scn: Remove test case made obsolete by
	PR1759.

2011-03-08	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1759/cpukit