@@ -1,3 +1,9 @@
+2011-07-22	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	PR 1839/filesystem
+	* psxfchx01/init.c, psxfchx01/psxfchx01.scn, psxfile01/psxfile01.scn,
+	psxfile01/test.c: Update test to reflect new status codes.
+
 2011-07-21	Ralf Corsépius <ralf.corsepius@rtems.org>
 
 	* psxhdrs/Makefile.am: Remove -Wno-unused-but-set-variable 
